Create TokenController
