# routes/api.php
@@ -1,10 +1,9 @@
 <?php
 
-use App\Models\User;
+use App\Http\Controllers\CustomerController;
+use App\Http\Controllers\TokenController;
 use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Route;
-use Illuminate\Validation\ValidationException;
 
 /*
 |--------------------------------------------------------------------------
@@ -21,22 +20,7 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::apiResource('customer', App\Http\Controllers\CustomerController::class)->middleware('auth:sanctum');
+Route::apiResource('customer', CustomerController::class)->middleware('auth:sanctum');
 
-Route::post('/tokens/create', function (Request $request) {
-    $request->validate([
-        'email' => 'required|email',
-        'password' => 'required',
-        'device_name' => 'required',
-    ]);
-
-    $user = User::where('email', $request->email)->first();
-
-    if (! $user || ! Hash::check($request->password, $user->password)) {
-        throw ValidationException::withMessages([
-            'email' => ['The provided credentials are incorrect.'],
-        ]);
-    }
-
-    return $user->createToken($request->device_name)->plainTextToken;
-});
+Route::post('/tokens', [TokenController::class, 'store']);
+Route::delete('/tokens', [TokenController::class, 'destroy']);
